# odoo-reporting

./: .dockerignore  .env.sample  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
odoo_sales/: __init__.py  auth.py  cli.py  client.py  users.py  web.py
odoo_sales/static/: index.html  login.html
skills/odoo-xmlrpc-integration/: SKILL.md
skills/odoo-xmlrpc-integration/agents/: openai.yaml
skills/odoo-xmlrpc-integration/references/: xmlrpc.md
skills/python-project-standards/: SKILL.md
skills/python-project-standards/agents/: openai.yaml
skills/python-project-standards/references/: dotenv.md  standards.md  uv.md
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: test_sales_cli.py
